<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".ui.addOrEditItems.AddAndEditItemActivity"
    android:paddingStart="@dimen/_15sdp"
    android:paddingEnd="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bu_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:background="@drawable/background_radius_second_color"
            android:padding="@dimen/_5sdp"
            android:textColorHint="#424D59"
            app:tint="@color/my_orange"
            android:elevation="@dimen/_4sdp"
            android:translationZ="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_35sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add new item"
            android:textSize="@dimen/_15ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="#363636"
            android:textStyle="bold"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What kind of item would you like to add ?"
            android:textColor="#3A3C3F"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            android:layout_gravity="start"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center">
            <RadioGroup
                android:id="@+id/radioGroupeItemType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButtonService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Service"
                    android:buttonTint="@color/black"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="#3A3C3F"
                    android:layout_marginEnd="@dimen/_10sdp"/>
                <RadioButton
                    android:id="@+id/radioButtonProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product"
                    android:textColor="#3A3C3F"
                    android:checked="true"
                    android:buttonTint="@color/black"
                    android:textSize="@dimen/_11ssp"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textSize="@dimen/_11ssp"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="#3A3C3F"/>
        <TextView
            android:id="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bu_scanner"
            android:backgroundTint="#F2F2F5"
            android:textSize="@dimen/_11ssp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:hint="Enter the Id"
            android:textColorHint="#9E000000"
            android:layout_marginBottom="@dimen/_20sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="#3A3C3F"/>
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bu_scanner"
            android:backgroundTint="#F2F2F5"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:hint="Enter title"
            android:textColorHint="#424D59"
            android:layout_marginBottom="@dimen/_20sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="#3A3C3F"/>
        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/background_bu_scanner"
            android:backgroundTint="#F2F2F5"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:padding="@dimen/_10sdp"
            android:hint="Enter description"
            android:gravity="start"
            android:textColorHint="#424D59"
            android:layout_marginBottom="@dimen/_20sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="#3A3C3F"/>
        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bu_scanner"
            android:backgroundTint="#F2F2F5"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:padding="@dimen/_10sdp"
            android:hint="Enter amount"
            android:textColorHint="#424D59"
            android:inputType="number"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center">
            <TextView
                android:id="@+id/bu_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:gravity="center"
                android:textColor="#B4000000"
                android:textSize="@dimen/_15ssp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/bu_add_or_edit_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add item"
                android:gravity="center"
                android:background="@drawable/background_bu_scanner"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:backgroundTint="@color/my_orange"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>